[package]
name = "hg-rs"
version = "0.1.0"
authors = ["ming li <mingyli34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
bincode = "1.2.1"
clap = "2.33.1"
chrono = { version = "0.4.11", features = ["serde"] }
hex = "0.4.2"
regex = "1.3.7"
serde = { version = "1.0.110", features = ["derive"] }
sha-1 = "0.8.2"
tempfile = "3.1.0"